feat(server): account PUT method
